# Renderer3D

./: .gitignore  CMakeLists.txt  README.md  Renderer.sln
src/: main.cpp
src/Renderer/: renderer.cpp  texture.cpp
src/Renderer/Rasterizer/: parallelrenderer.cpp  rasteriser.cpp
src/Renderer/RayTracer/: raytracer.cpp
src/geometry/: objLoader.cpp
src/image/: PNGLoader.c  PNGLoader.h  deflate.c
src/include/: geometry.hpp  memalloc.h  platform.h  rasteriser.h  raytracer.h  render.h  renderer.h  shader.h  texture.hpp
src/maths/: matrix.hpp  vec.hpp
src/platform/: linux_wayland.cpp  linux_wayland.h  win32_platform.cpp  win32_platform.h
src/utils/: memalloc.cpp  memalloc.h  parallel_render.cpp  parallel_render.h  shapes.h  thread_pool.h
